# sketches

./: README.md
ants/: index.hbs  package.json  tsconfig.json  tslint.json  webpack.config.js
ants/engine/: Cargo.toml
ants/engine/src/: conf.rs  driver.rs  engine.rs  lib.rs  universe_generator.rs
ants/src/: canvas.ts  index.ts  index.tsx  loop.ts  ui.tsx  webgl.ts
common/: Cargo.toml  README.md
common/src/: color.rs  lib.rs
game_of_life/: index.hbs  package.json  tsconfig.json  tslint.json  webpack.config.js
game_of_life/engine/: Cargo.toml
game_of_life/engine/src/: lib.rs
game_of_life/src/: index.ts  index.tsx  util.ts  wasmShim.js
game_of_life/src/components/: App.tsx
network/: README.md  index.hbs  package.json  run.sh  tsconfig.json  webpack.config.js
network/engine/: Cargo.toml  IDEAS
network/engine/src/: conf.rs  lib.rs
network/engine/src/minutiae/: engine.rs  mod.rs  world_generator.rs
network/src/: custom.d.ts  index.tsx  loop.ts  ui.tsx  webgl.ts
network/src/shaders/: frag.glsl  vert.glsl
template/: README.md  package.json  webpack.config.js  webpack.prod.js
template/engine/: Cargo.toml
template/engine/src/: lib.rs
template/src/: index.ts
triangles/: index.hbs  package.json  webpack.config.js
triangles/engine/: Cargo.toml
triangles/engine/src/: lib.rs
triangles/src/: index.ts  index.tsx
util/: Cargo.toml
util/src/: lib.rs  math.rs
