[package]
name = "common"
version = "0.2.0"
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"

[dependencies]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "fb0bbc00" }
uuid = "0.7.4"
console_error_panic_hook = { git = "https://github.com/Ameobea/console_error_panic_hook.git" }
