[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "engine"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.28"
uuid = { version = "0.7.1", features = ["v4"] }
rand = "0.5.5"
rand_pcg = "0.1.1"
rand_core = "0.3.0"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
# minutiae = "0.11.0"
minutiae = { path="../../../minutiae/minutiae" }

common = { path="../../common" }

[profile.dev]
opt-level = 3
