[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "engine"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "fb0bbc00" }
common = { path="../../common" }
log = "0.4"
wasm-logger = { git = "https://gitlab.com/Ameobea/wasm-logger.git" }
