[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "engine"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.47"
common = { path="../../common" }
sketches-util = { path = "../../util" }
log = "0.4.6"
wasm-logger = "0.1.5"
# minutiae = { version = ">=0.12.2", features = ["emscripten"] }
minutiae = { features = ["emscripten"], path="../../../minutiae/minutiae" }
uuid = "0.7.4"
noise = "0.5.1"
rand = { git = "https://github.com/rust-random/rand.git", rev="266cee2b74aeb0e3a89e5fc5c11b6ed475355a07" }
rand_distr = { git = "https://github.com/rust-random/rand.git", rev="266cee2b74aeb0e3a89e5fc5c11b6ed475355a07" }
serde = "1.0.94"
serde_json = "1.0.40"
serde_derive = "1.0.94"
console_error_panic_hook = "0.1.6"
