[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "engine"
version = "0.1.0"

[dependencies]
nalgebra = "0.16.4"
ncollide2d = "0.17"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
wasm-bindgen = "0.2.21"
rand = "0.5.5"
rand_pcg = "0.1.1"
rand_core = "0.3.0"

[dependencies.common]
path = "../../common"

[lib]
crate-type = ["cdylib"]
